WIP with only three more task to go

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 	<body>
 		
 
+    <!-- In HTML: Create an input and a button. -->
+
     <input type="" name="">
     <button>Submit</button>
     <!-- JQuery -->
