--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
 		
 
     <!-- In HTML: Create an input and a button. -->
+    <form id="form" novalidate>
+      <input id="email">
+      <button id="submit">Submit</button>
+    </form>
 
-    <input type="" name="">
-    <button>Submit</button>
     <!-- JQuery -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 
